change metadata, fix login cutoff for certain screen sizes

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -69,7 +69,7 @@
 }
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 18, 68, 60;
+  --background-start-rgb: 35, 44, 77;
   --background-end-rgb: 255, 255, 255;
 }
 
@@ -118,8 +118,8 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-@layer utilities {
+/* @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
